After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784349 - gnome-session crashes when logging out via gnome-shell
gnome-session crashes when logging out via gnome-shell
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
3.22.x
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-29 15:12 UTC by Debarshi Ray
Modified: 2017-07-03 14:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
client: Prevent the GDBusMethodInvocation from being unref-ed twice (1.78 KB, patch)
2017-06-29 15:13 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-06-29 15:12:54 UTC
Tomas has been experiencing this for the past few releases:


==1956== Invalid read of size 8
==1956==    at 0x81EE937: g_type_check_instance_is_fundamentally_a (gtype.c:4023)
==1956==    by 0x81CDD64: g_object_unref (gobject.c:3082)
==1956==    by 0x8452C67: g_source_callback_unref (gmain.c:1566)
==1956==    by 0x84544B3: g_source_destroy_internal (gmain.c:1255)
==1956==    by 0x84562EF: g_main_dispatch (gmain.c:3258)
==1956==    by 0x84562EF: g_main_context_dispatch (gmain.c:3899)
==1956==    by 0x84565E7: g_main_context_iterate.isra.25 (gmain.c:3972)
==1956==    by 0x8456901: g_main_loop_run (gmain.c:4168)
==1956==    by 0x114FD4: main (main.c:446)
==1956==  Address 0x1bc3f300 is 0 bytes inside a block of size 104 free'd
==1956==    at 0x4C2FD18: free (vg_replace_malloc.c:530)
==1956==    by 0x845BB4D: g_free (gmem.c:189)
==1956==    by 0x8473AEF: g_slice_free1 (gslice.c:1136)
==1956==    by 0x81ED710: g_type_free_instance (gtype.c:1943)
==1956==    by 0x81F14AF: g_value_unset (gvalue.c:275)
==1956==    by 0x119C8B: _gsm_exported_client_private_skeleton_handle_method_call (org.gnome.SessionManager.ClientPrivate.c:1077)
==1956==    by 0x7EF3216: g_dbus_interface_method_dispatch_helper (gdbusinterfaceskeleton.c:609)
==1956==    by 0x7EDB5CB: call_in_idle_cb (gdbusconnection.c:4850)
==1956==    by 0x8452C26: g_idle_dispatch (gmain.c:5586)
==1956==    by 0x8456246: g_main_dispatch (gmain.c:3234)
==1956==    by 0x8456246: g_main_context_dispatch (gmain.c:3899)
==1956==    by 0x84565E7: g_main_context_iterate.isra.25 (gmain.c:3972)
==1956==    by 0x8456901: g_main_loop_run (gmain.c:4168)
==1956==  Block was alloc'd at
==1956==    at 0x4C2EB6B: malloc (vg_replace_malloc.c:299)
==1956==    by 0x845BA38: g_malloc (gmem.c:94)
==1956==    by 0x8473575: g_slice_alloc (gslice.c:1025)
==1956==    by 0x8473A08: g_slice_alloc0 (gslice.c:1051)
==1956==    by 0x81ED325: g_type_create_instance (gtype.c:1848)
==1956==    by 0x81CE4B7: g_object_new_internal (gobject.c:1783)
==1956==    by 0x81CFEE4: g_object_newv (gobject.c:1930)
==1956==    by 0x81D06A3: g_object_new (gobject.c:1623)
==1956==    by 0x7EF09A0: _g_dbus_method_invocation_new (gdbusmethodinvocation.c:369)
==1956==    by 0x7ED7796: schedule_method_call.isra.4 (gdbusconnection.c:4880)
==1956==    by 0x7ED84C4: validate_and_maybe_schedule_method_call (gdbusconnection.c:4982)
==1956==    by 0x7ED9236: obj_message_func (gdbusconnection.c:5024)
==1956==    by 0x7ED9236: distribute_method_call (gdbusconnection.c:7069)
==1956==    by 0x7ED9236: on_worker_message_received (gdbusconnection.c:2304)


(gdb) bt full
  • #0 g_type_check_instance_is_fundamentally_a
    at gtype.c line 4026
  • #1 g_object_unref
    at gobject.c line 3082
  • #2 g_source_callback_unref
    at gmain.c line 1566
  • #3 g_source_destroy_internal
    at gmain.c line 1255
  • #4 g_main_dispatch
    at gmain.c line 3258
  • #5 g_main_context_dispatch
    at gmain.c line 3899
  • #6 g_main_context_iterate
    at gmain.c line 3972
  • #7 g_main_loop_run
    at gmain.c line 4168
  • #8 main
    at main.c line 446

Comment 1 Debarshi Ray 2017-06-29 15:13:50 UTC
Created attachment 354695 [details] [review]
client: Prevent the GDBusMethodInvocation from being unref-ed twice
Comment 2 Ray Strode [halfline] 2017-06-29 15:15:19 UTC
Review of attachment 354695 [details] [review]:

awesome, push it!
Comment 3 Debarshi Ray 2017-06-29 15:58:50 UTC
Comment on attachment 354695 [details] [review]
client: Prevent the GDBusMethodInvocation from being unref-ed twice

Thanks halfline! Given that this has been crashing for so long, I pushed all the way down to gnome-3-22.